# switch-pico

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.py  build.sh  controller_color_config.h  controller_uart_bridge.py  example_switch_macro.py  gyro_support_plan.md  host_uart_logger.py  mac_controller_uart_bridge.py  pyproject.toml  requirements.txt  switch-pico.cpp  switch_pico_uart.py  switch_pro_descriptors.h  switch_pro_driver.cpp  switch_pro_driver.h  tusb_config.h
examples/: example_switch_macro.py
firmware/: switch-pico.elf  switch-pico.uf2
src/switch_pico_bridge/: __init__.py  controller_uart_bridge.py  host_uart_logger.py  switch_pico_uart.py
tests/: test_uart_protocol.py
tools/: debug_imu_raw.py  read_pro_imu.py
